[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HiStrux"
version = "1.0.0"
description = "Python package implementing tools for working with Hi-C features extraction and reconstructions"
authors = [
    { name = "Adrian Zaręba", email = "zarebaff50@gmail.com" },
    { name = "Wiktor Wierzchowski", email = "w.wierzch@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    'numpy>=1.26.4',
    'pandas>=2.2.3',
    'scipy>=1.12.0',
    'matplotlib>=3.9.2',
    'more-itertools>=10.5.0',
    'hoomd>=4.8.2',
    'cooler>=0.10.2',
    'h5py>=3.11.0',
    'gsd>=3.3.2',
    'pyvista>=0.44.2',
    'scikit-learn>=1.6.0',
    'seaborn>=0.13.2'
]
python = ">=3.9"

[project.urls]
repository = "https://github.com/AdixPlaysGames/HiStrux"
documentation = ""
